--- a/packages/nr-metadata/setup.cfg
+++ b/packages/nr-metadata/setup.cfg
@@ -52,6 +52,7 @@ oarepo.models =
     common = nr_metadata.common.models:records.json
     documents = nr_metadata.documents.models:records.json
     data = nr_metadata.data.models:records.json
+    datacite = nr_metadata.datacite.models:records.json
 
 [build_sphinx]
 source-dir = docs/
