--- a/models/datacite_4.5.yaml
+++ b/models/datacite_4.5.yaml
@@ -26,8 +26,7 @@ DataCiteMetadata:
       use: "datacite-datatypes#Publisher"
 
     publicationYear:
-      type: string
-      pattern: "^[0-9]{4}$"
+      type: keyword
 
     subjects[]:
       use: "datacite-datatypes#Subject"
@@ -73,7 +72,7 @@ DataCiteMetadata:
       use: "datacite-datatypes#FundingReference"
 
     schemaVersion:
-      type: string
+      type: keyword
 
     container:
       use: "datacite-datatypes#Container"
@@ -87,6 +86,8 @@ DataCiteModel:
   ui:
     marshmallow:
       class: nr_metadata.datacite.services.records.ui_schema.DataCiteRecordUISchema
+  use: [invenio]
 
-  metadata:
-    use: ['datacite#DataCiteMetadata']
+  properties:
+    metadata:
+      use: ['datacite#DataCiteMetadata']
