moved form components from nr-docs

--- a/packages/nr-metadata/setup.cfg
+++ b/packages/nr-metadata/setup.cfg
@@ -46,7 +46,8 @@ tests =
 * = *.json, *.rst, *.md, *.json5, *.jinja2, *.po, *.mo, *.pot
 
 [options.entry_points]
-
+invenio_assets.webpack =
+    nr_components = nr_metadata.ui.webpack:theme
 
 oarepo.models =
     common = nr_metadata.common.models:records.json
@@ -75,3 +76,5 @@ ignore =
 [tool:pytest]
 addopts = --doctest-glob="*.rst" --doctest-modules
 testpaths = tests
+
+
