added jinja components

--- a/packages/nr-metadata/setup.cfg
+++ b/packages/nr-metadata/setup.cfg
@@ -48,6 +48,8 @@ tests =
 [options.entry_points]
 invenio_assets.webpack =
     nr_components = nr_metadata.ui.webpack:theme
+invenio_base.blueprints =
+    nr_metadata = nr_metadata.ui:create_blueprint
 
 oarepo.models =
     common = nr_metadata.common.models:records.json
