--- a/packages/oarepo-model-builder-nr/oarepo_model_builder_nr/models/nr_documents_2.0.yaml
+++ b/packages/oarepo-model-builder-nr/oarepo_model_builder_nr/models/nr_documents_2.0.yaml
@@ -101,8 +101,7 @@ DocumentModel:
         )
       keywords: |
         SyntheticSystemField(
-            PathSelector("metadata.subjects"),
-            map=lambda x: x.get("subject", {}).get("value"),
+            PathSelector("metadata.subjects.subject.value"),
             key="syntheticFields.keywords",
         )
       date: |
