--- a/packages/nr-metadata/MANIFEST.in
+++ b/packages/nr-metadata/MANIFEST.in
@@ -4,3 +4,6 @@ recursive-include nr_metadata *.json
 recursive-include nr_metadata *.po
 recursive-include nr_metadata *.pot
 recursive-include nr_metadata *.mo
+recursive-include nr_metadata *.js
+recursive-include nr_metadata *.jsx
+recursive-include nr_metadata *.less
