--- a/models/datacite_datatypes_4.5.yaml
+++ b/models/datacite_datatypes_4.5.yaml
@@ -167,7 +167,7 @@ Date:
       class: nr_metadata.datacite.services.records.ui_schema_datatypes.DateUISchema
   properties:
     date:
-      type: edtf
+      type: edtf-time
       required: true
     dateType:
       "use": "datacite-datatypes#DateType"
