--- a/packages/nr-metadata/MANIFEST.in
+++ b/packages/nr-metadata/MANIFEST.in
@@ -8,5 +8,5 @@ recursive-include nr_metadata *.js
 recursive-include nr_metadata *.jsx
 recursive-include nr_metadata *.less
 recursive-include nr_metadata *.jinja
-recursive-include oarepo_dashboard *.variables
-recursive-include oarepo_dashboard *.overrides
+recursive-include nr_metadata *.variables
+recursive-include nr_metadata *.overrides
