--- a/packages/oarepo-model-builder-nr/setup.cfg
+++ b/packages/oarepo-model-builder-nr/setup.cfg
@@ -41,6 +41,7 @@ oarepo.models =
     nr-documents = oarepo_model_builder_nr.models:nr_documents_2.0.yaml
     datacite = oarepo_model_builder_nr.models:datacite_4.5.yaml
     datacite-datatypes = oarepo_model_builder_nr.models:datacite_datatypes_4.5.yaml
+    nr-data = oarepo_model_builder_nr.models:nr_data_2.0.yaml
 
 [build_sphinx]
 source-dir = docs/
