--- a/models/nr_data_2.0.yaml
+++ b/models/nr_data_2.0.yaml
@@ -16,8 +16,10 @@ NRDataMetadata:
     dateWithdrawn:
       type: object
       properties:
-        dateInformation: keyword
-        type: date
+        dateInformation:
+          type: keyword
+        type:
+          type: date
     abstract:
       required: true
     publishers[]:
